# DisinfectionRobot

./: .gitignore  README.md  room.txt  try.txt
disinfection_robot/: CMakeLists.txt  package.xml
disinfection_robot/launch/: dis_robot.launch  rviz.launch
disinfection_robot/models/dis_robot/: model.config  model.sdf
disinfection_robot/models/dis_robot/meshes/: UVlamp.dae  chassis.dae
disinfection_robot/src/: move.py
disinfection_robot/worlds/: dis_robot.world
m2wr_description/: CMakeLists.txt  package.xml
m2wr_description/launch/: rviz.launch  spawn.launch  world.launch
m2wr_description/urdf/: bot.xacro  m2wr.xacro  macro.xacro
m2wr_description/worlds/: dis_world.world
models/dis_robot/: model.sdf
models/room/: model.sdf
motion_plan/: CMakeLists.txt  package.xml  setup.py
motion_plan/launch/: gmapping.launch
motion_plan/maps/: map.pgm
motion_plan/scripts/: go_to_point.py  make_disinfection.py  obstacle_avoidance.py  reading_laser.py
motion_plan/src/motion_plan/: disinfection.py  map.py  mapy.py  move.py  purepursuit.py  robot.py
robot_description/: CMakeLists.txt  package.xml
robot_description/launch/: rviz.launch  spawn.launch  world.launch
robot_description/urdf/: m2wr.xacro
robot_description/worlds/: closed_room.world
